# timestamp_to_dual_sine

./: .gitignore  README.md  requirements_build.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-publish.yml  tox.yml
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
tests/: test_plantilla.py
